[package]
name = "room-cleaner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21.0"
eframe = { version = "0.21.3", features = ["persistence"] }
log = "0.4.17"
# env_logger = "0.10.0"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }